feat: 입출금 관리 css 추가 - 일부 추가

--- a/food-front/src/component/index.module.scss
+++ b/food-front/src/component/index.module.scss
@@ -43,3 +43,16 @@
   max-width: 900px;
   margin: 0 auto;
 }
+
+.moneyTextInfo{
+  font-size: 2.5em;
+}
+
+.moneyText {
+  font-size : 2em;
+  color: blue;
+}
+
+.info {
+  font-weight: lighter;
+}
